# hannos

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  shell.rs  vgabuf.rs
src/allocator/: buddy.rs  bump.rs  fixed.rs  mod.rs
src/fs/: disk.rs  file.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
